created the json colors file

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,8 +24,8 @@
     overflow-y: scroll;
 }
 .test{
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
-.body{
+html, body{
     overflow: hidden;
 }
