--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
            </div><br>
            <div class="container is-fluid has-text-centered">
               <h1 class="title">Choose your color parlette</h1>
-             <div class="columns section" >
+             <div class="columns section">
                <div class="column is-3" *ngFor="let color of data">
                  <a (click)="change(color.id)">
                     <div class="item box">
@@ -28,35 +28,35 @@
                  </a>
                 
                </div>
-               <!-- <div class="column is-3">
-                <div class="item box">
-                  <div class="one fill"></div>
-                  <div class="two fill"></div>
-                  <div class="three fill"></div>
-                  <div class="four fill"></div>
-                  
-               </div>
-               </div>
-               <div class="column is-3">
-                <div class="item box">
-                  <div class="one fill"></div>
-                  <div class="two fill"></div>
-                  <div class="three fill"></div>
-                  <div class="four fill"></div>
-                   
-               </div>
-               </div>
-               <div class="column is-3">
-                <div class="item box">
-                  <div class="one fill"></div>
-                  <div class="two fill"></div>
-                  <div class="three fill"></div>
-                  <div class="four fill"></div>
-               </div>
-               </div> -->
                
              </div>
            </div>
+           <div class="gencolors columns">
+             <div class="cl1 space column">Text
+               
+             </div>
+             <div class="cl2 space column">Forground</div>
+             <div class="cl3 space column">Background</div>
+             <div class="cl4 space column">Shade</div>
+           </div>
+           <div class="section">
+             <div class="columns">
+               <div class="column is-6">
+                 <button class="button">Generate</button><br><br>
+                 <button class="button">Download the palette</button>
+               </div>
+               <div class="column is-6">
+                  <div class="gensubcolors columns">
+                      <div class="cl1 space column"></div>
+                      <div class="cl2 space column"></div>
+                      <div class="cl3 space column"></div>
+                      <div class="cl4 space column"></div>
+                    </div>
+               </div>
+             </div>
+             
+           </div>
+           
          </div>
        </div>
      </div>
@@ -77,7 +77,7 @@
       <div class="section has-text-centered">
             <h1 class="title is-1" [style.color]="colors?.c2">Welcome to your testing <br>component</h1>
             <h1 class="subtitle">Lorem ipsum dolor, sit amet consectetur <br>adipisicing elit. Rerum distinctio maiores quas atque sapiente </h1>
-            <a href="#" class="button is-large">Button</a>
+            <a href="#" class="button is-large" [style.background-color]="colors?.c4" [style.color]="colors?.c2">Button</a>
             <br><br><br>
       </div> <hr>
       <br>
@@ -87,25 +87,25 @@
           <div class="level" [style.background-color]="colors?.c3">
             <div class="level-item has-text-centered">
               <div>
-                <h1 class="title">Hello</h1>
+                <h1 class="title" [style.color]="colors?.c4">Hello</h1>
               <p class="heading">hi</p>
               </div>
             </div>
             <div class="level-item has-text-centered">
                 <div>
-                  <h1 class="title">Hello</h1>
+                  <h1 class="title" [style.color]="colors?.c4">Hello</h1>
                 <p class="heading">hi</p>
                 </div>
               </div>
               <div class="level-item has-text-centered">
                   <div>
-                    <h1 class="title">Hello</h1>
+                    <h1 class="title" [style.color]="colors?.c4">Hello</h1>
                   <p class="heading">hi</p>
                   </div>
                 </div>
                 <div class="level-item has-text-centered">
                     <div>
-                      <h1 class="title">Hello</h1>
+                      <h1 class="title" [style.color]="colors?.c4">Hello</h1>
                     <p class="heading">hi</p>
                     </div>
                   </div>
@@ -113,7 +113,7 @@
       </div>
       <div class="columns">
         <div class="column is-6">
-            <div class="notification">
+            <div class="notification" [style.background-color]="colors?.c2" [style.background-color]="colors?.c1">
                 <button class="delete"></button>
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit lorem ipsum dolor. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Sit amet,
@@ -121,7 +121,7 @@
               </div>
         </div>
         <div class="column is-6">
-            <div class="notification">
+            <div class="notification" [style.background-color]="colors?.c2" [style.background-color]="colors?.c1">
                 <button class="delete"></button>
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit lorem ipsum dolor. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Sit amet,
