working on css files uploading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -158,7 +158,7 @@
 <div (click)="test($event)" id="ok"></div>
 
 <br>
-<form>
+<form enctype="multipart/form-data">
    <input type="file" name="data" id="" (change)="onFileUpload($event)">
 </form>
 <button class="button" (click)="readTextFile()">upload</button>
