created the main an worked on it

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,131 @@
-<p>main works!</p>
+<!-- navbar begins -->
+
+<div class="navbar my-nav">
+    
+         <div class="navbar-brand">
+        <a href="#" class="navbar-item item">Colors</a>
+    </div>
+    <div class="navbar-menu">
+        <div class="navbar-end">
+            <a href="#" class="navbar-item item">Home</a>
+            <a href="#" class="navbar-item item">Docs</a>
+            <a href="#" class="navbar-item item">Contact</a>
+            <a href="#" class="navbar-item item">About</a>
+        </div>
+    </div>
+    </div>
+   
+
+<!-- sample colors -->
+   
+    <div class="columns section"> 
+             
+                <div class="space column is-3">
+                    <div class="colr has-text-centered" style="background-color:rgb(54, 201, 201) ;">
+                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
+                        <h1>#ff4343</h1><br>
+                    </div>
+                </div>
+                <div class="space column is-3">
+                    <div class="colr has-text-centered" style="background-color:rgb(37, 23, 23) ;">
+                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
+                        <h1>#ff4343</h1><br>
+                    </div>
+                </div>
+                <div class="space column is-3">
+                    <div class="colr has-text-centered" style="background-color: rgb(159, 103, 214);">
+                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
+                        <h1>#ff4343</h1><br>
+                    </div>
+                </div>
+                <div class="space column is-3">
+                    <div class="colr has-text-centered" style="background-color:rgb(235, 203, 25) ;">
+                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
+                        <h1>#ff4343</h1><br>
+                    </div>
+                </div>
+                <div class="space column is-3">
+                        <div class="colr has-text-centered" style="background-color:rgba(23, 71, 39, 0.603) ;">
+                            <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
+                            <h1>#ff4343</h1><br>
+                        </div>
+                    </div>
+</div>  
+
+    <div class="section">
+        <button class="button is-rounded gen">Generate</button>
+        <div class="colors">
+            <div class="color" style="background-color: rebeccapurple;"></div>
+            <div class="color" style="background-color: firebrick;"></div>
+            <div class="color" style="background-color: salmon;"></div>
+            <div class="color" style="background-color:sienna ;"></div>
+            <div class="color" style="background-color:violet ;"></div>
+            <div class="color" style="background-color:slategray ;"></div>
+            <div class="color" style="background-color: wheat;"></div>
+            <div class="color" style="background-color: hotpink;"></div>
+            <div class="color" style="background-color:khaki ;"></div>
+            <div class="color" style="background-color: tan;"></div>
+            <div class="color" style="background-color: navajowhite;"></div>
+            <div class="color" style="background-color: maroon;"></div>
+            <div class="color" style="background-color:chocolate ;"></div>
+            <div class="color" style="background-color: rebeccapurple;"></div>
+            <div class="color" style="background-color: firebrick;"></div>
+            <div class="color" style="background-color: salmon;"></div>
+            <div class="color" style="background-color:sienna ;"></div>
+            <div class="color" style="background-color:violet ;"></div>
+            <div class="color" style="background-color:slategray ;"></div>
+            <div class="color" style="background-color: wheat;"></div>
+            <div class="color" style="background-color: hotpink;"></div>
+            <div class="color" style="background-color:khaki ;"></div>
+            <div class="color" style="background-color: tan;"></div>
+            <div class="color" style="background-color: navajowhite;"></div>
+            <div class="color" style="background-color: maroon;"></div>
+            <div class="color" style="background-color:chocolate ;"></div>
+            <div class="color" style="background-color: tan;"></div>
+            <div class="color" style="background-color: navajowhite;"></div>
+            <div class="color" style="background-color: maroon;"></div>
+            <div class="color" style="background-color:chocolate ;"></div>
+        </div><br>
+       
+           <form >
+                <div class="file">
+                    <label class="file-label">
+                      <input  class="file-input" type="file" name="resume">
+                      <span class="file-cta">
+                        <span class="file-icon">
+                          <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label">
+                          Choose your html file
+                        </span>
+                      </span>
+                    </label>
+                  </div>
+           </form><br>
+           <form enctype="multipart/form-data" class="form">
+            <div class="file">
+                <label class="file-label">
+                  <input multiple="true" class="file-input" type="file" name="resume">
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label">
+                      Choose your css files
+                    </span>
+                  </span>
+                </label>
+              </div>
+       </form>
+               
+   
+    </div>
+    <footer class="footer my-footer">
+            <div class="content has-text-centered">
+              <p>
+                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+              </p>
+            </div>
+          </footer>
