testing material design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class=" ">
+<!-- <div class=" ">
 <div class="columns">
   
   <div class="column body is-6">
@@ -8,6 +8,52 @@
   </div>
   <div class="column is-6">
       <app-output></app-output>
+      
   </div>
 </div>
-</div> 
+</div> -->
+<!-- 
+<button mat-raised-button color="primary">Heloo</button>
+<div class="mat-display-4">How to use </div>
+<div class="mat-display-3">How to use </div>
+<div class="mat-display-2">How to use </div>
+<div class="mat-display-1">How to use </div>
+
+<div class="mat-headline">this is bla bla</div>
+<div class="mat-title">this is bla bla</div>
+<div class="mat-subheading-2">this is bla bla</div>
+<div class="mat-subheading-1"> this is bla bla</div>
+<div class="mat-body-1">testing body</div>
+<div class="mat-body-2">testing body</div>
+<div class="mat-caption">testing body</div>
+
+<div class="ma-typography">
+  <h1>this is a heading</h1>
+  <h2>this is a heading </h2>
+  <h3>this is a heading</h3>
+  <h4>this is a heading</h4>
+</div> -->
+
+<!-- <button mat-button>hello</button>
+<button mat-raised-button>hello</button>
+<button mat-flat-button>hello</button>
+<button mat-stroked-button>hello</button>
+
+<button mat-icon-button>Icon</button>
+<button mat-fab>fab</button>
+<button mat-mini-fab>min</button>
+
+<button mat-button color="primary">primary</button>
+<button mat-button color="accent">accent</button>
+<button mat-button color="warn">warn</button>
+
+<button mat-raised-button color="primary">primary</button>
+<button mat-raised-button color="accent">accent</button>
+<button mat-raised-button color="warn">warn</button>
+
+<button mat-raised-button disableRipple color="warn">warn</button> -->
+
+<div>
+   <mat-button-toggle #tooglebtn>Toggle</mat-button-toggle>
+   {{tooglebtn.checked}}
+   </div>
