--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class=" ">
+<div class=" ">
 <div class="columns">
   
   <div class="column body is-6">
@@ -11,7 +11,7 @@
       
   </div>
 </div>
-</div> -->
+</div>
 <!-- 
 <button mat-raised-button color="primary">Heloo</button>
 <div class="mat-display-4">How to use </div>
@@ -53,7 +53,25 @@
 
 <button mat-raised-button disableRipple color="warn">warn</button> -->
 
-<div>
+<!-- <div>
    <mat-button-toggle #tooglebtn>Toggle</mat-button-toggle>
    {{tooglebtn.checked}}
-   </div>
+  </div>
+  <div>
+    <mat-button-toggle-group #va="matButtonToggleGroup" multiple>
+      <mat-button-toggle  value="Angular">Angular</mat-button-toggle>  
+      <mat-button-toggle value="react">react</mat-button-toggle>
+      <mat-button-toggle value="Vue">Vue</mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
+  {{va.value}}
+
+
+  <mat-icon color="primary">today</mat-icon>
+  <div>
+    <span matBadge="5" matBadgePosition="above after">notification</span><br> <br>
+    <span matBadge="5" matBadgePosition="above after" matBadgeSize="large">notification</span>
+  </div> -->
+
+  <!-- <iframe id="iframe" #iframe src="https://material.angular.io/components/button/examples" frameborder="0" height="900px" width="1400px"></iframe>
+  <button (click)="frame($event)">test</button> -->
