added the other color changing system

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class=" ">
+<div class=" ">
 <div class="columns">
   
   <div class="column body is-6">
@@ -11,7 +11,7 @@
       
   </div>
 </div>
-</div> -->
+</div>
 <!-- 
 <button mat-raised-button color="primary">Heloo</button>
 <div class="mat-display-4">How to use </div>
