--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -1,2 +1,6 @@
 <div id="output" (click)="action($event)"></div>
 <button (click)="load()">load</button>
+<button (click)="daata()">data</button>
+
+
+<a (click)="donw($event)">tess</a>
