--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -18,74 +18,51 @@
 
 <!-- sample colors -->
    
-    <div class="columns section" (click)="getcolor($event)"> 
+    <div class="columns section"> 
              
-                <div class="space column is-3">
-                    <div  class="colr has-text-centered" style="background-color:rgb(54, 201, 201) ;">
+                <div class="space column is-3" *ngFor="let color of colors" (click)="getcolor($event)" >
+                    <div  class="colr has-text-centered" [id]="color.id" [style.backgroundColor]="color.color">
                         <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
-                        <h1>#ff4343</h1><br>
+                        <h1>{{color.id}}</h1><br>
                     </div>
                 </div>
-                <div class="space column is-3">
-                    <div class="colr has-text-centered" style="background-color:rgb(37, 23, 23) ;">
-                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
-                        <h1>#ff4343</h1><br>
-                    </div>
-                </div>
-                <div class="space column is-3">
-                    <div class="colr has-text-centered" style="background-color: rgb(159, 103, 214);">
-                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
-                        <h1>#ff4343</h1><br>
-                    </div>
-                </div>
-                <div class="space column is-3">
-                    <div class="colr has-text-centered" style="background-color:rgb(235, 203, 25) ;">
-                        <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
-                        <h1>#ff4343</h1><br>
-                    </div>
-                </div>
-                <div class="space column is-3">
-                        <div class="colr has-text-centered" style="background-color:rgba(23, 71, 39, 0.603) ;">
-                            <a href="#"><i class="fa fa-lock fa-2x" aria-hidden="true"></i></a>
-                            <h1>#ff4343</h1><br>
-                        </div>
-                    </div>
+         
 </div>  
 
     <div class="section">
         <button class="button is-rounded gen">Generate</button>
         <button class="button" (click)="choose()">{{state}}</button>
         <div class="colors">
-            <div class="color" style="background-color: rebeccapurple;"></div>
-            <div class="color" style="background-color: firebrick;"></div>
-            <div class="color" style="background-color: salmon;"></div>
-            <div class="color" style="background-color:sienna ;"></div>
-            <div class="color" style="background-color:violet ;"></div>
-            <div class="color" style="background-color:slategray ;"></div>
-            <div class="color" style="background-color: wheat;"></div>
-            <div class="color" style="background-color: hotpink;"></div>
-            <div class="color" style="background-color:khaki ;"></div>
-            <div class="color" style="background-color: tan;"></div>
-            <div class="color" style="background-color: navajowhite;"></div>
-            <div class="color" style="background-color: maroon;"></div>
-            <div class="color" style="background-color:chocolate ;"></div>
-            <div class="color" style="background-color: rebeccapurple;"></div>
-            <div class="color" style="background-color: firebrick;"></div>
-            <div class="color" style="background-color: salmon;"></div>
-            <div class="color" style="background-color:sienna ;"></div>
-            <div class="color" style="background-color:violet ;"></div>
-            <div class="color" style="background-color:slategray ;"></div>
-            <div class="color" style="background-color: wheat;"></div>
-            <div class="color" style="background-color: hotpink;"></div>
-            <div class="color" style="background-color:khaki ;"></div>
-            <div class="color" style="background-color: tan;"></div>
-            <div class="color" style="background-color: navajowhite;"></div>
-            <div class="color" style="background-color: maroon;"></div>
-            <div class="color" style="background-color:chocolate ;"></div>
-            <div class="color" style="background-color: tan;"></div>
-            <div class="color" style="background-color: navajowhite;"></div>
-            <div class="color" style="background-color: maroon;"></div>
-            <div class="color" style="background-color:chocolate ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: rebeccapurple;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: firebrick;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: salmon;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:sienna ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:violet ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:slategray ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: wheat;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: hotpink;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:khaki ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: tan;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: navajowhite;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: maroon;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:chocolate ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: rebeccapurple;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: firebrick;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: salmon;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:sienna ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:violet ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:slategray ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: wheat;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: hotpink;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:khaki ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: tan;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: navajowhite;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: maroon;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:chocolate ;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: tan;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: navajowhite;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color: maroon;"></div>
+            <div class="color" (click)="changeColor($event)"style="background-color:chocolate ;"></div>
         </div><br>
        
            <form >
