--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -103,9 +103,9 @@
     <footer class="footer my-footer">
             <div class="content has-text-centered">
               <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+                <strong>colors</strong> by <a href="https://jgthms.com">ntoh zidane</a>. The source code is Mit
                 <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                 licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
               </p>
             </div>
           </footer>
